packages/nemo-parser/tests/type_errors/unknown_var.nemo
fn main() = {
  unknown;

  set unknown = 3;
  set unknown.x = 3
}